# woo-hoo

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  docker-compose.yml  justfile  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/scripts/: hook.sh  orchestrator.py
.claude/skills/implement/: SKILL.md  examples.md  task-template.md
.claude/skills/status/: SKILL.md
.claude/skills/validate/: SKILL.md  checklist.md
.claude/state/: .gitkeep
.github/workflows/: ci.yml  pr.yml
charts/woo-hoo/: Chart.yaml  values.yaml
charts/woo-hoo/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
data/samples/: README.md
deploy/: values-production.yaml.example
deploy/local/: README.md  deploy.sh  secrets.env.example  values-local.yaml
docs/: architecture.md
docs/diagrams/: current-architecture.mmd  data-flow-comparison.mmd  data-sovereignty-comparison.mmd  implementation-architecture.mmd  proposed-architecture.mmd  system-overview.mmd
scripts/: download_samples.py  test_api_e2e.py  test_e2e.py  test_generation.py
scripts/benchmark/: README.md  benchmark_report.ipynb  loading_data.ipynb
src/woo_hoo/: __init__.py  cli.py  config.py  main.py
src/woo_hoo/api/: __init__.py  dependencies.py
src/woo_hoo/api/routers/: health.py  metadata.py
src/woo_hoo/instructions/: diwoo_schema.md  diwoo_schema.toml
src/woo_hoo/models/: __init__.py  diwoo.py  enums.py  requests.py  responses.py
src/woo_hoo/schemas/: diwoo-metadata-lijsten.xsd  diwoo-metadata.xsd
src/woo_hoo/services/: document_extractor.py  instruction_loader.py  metadata_generator.py  openrouter.py  prompt_templates.py  publicatiebank_client.py  xml_parser.py
src/woo_hoo/utils/: logging.py  retry.py
tests/: __init__.py  conftest.py  test_custom_llm.py
tests/fixtures/sample_documents/: advies.txt
tests/integration/: test_api.py
tests/unit/: test_instruction_loader.py  test_models.py  test_publicatiebank_client.py
