[project]
name = "woo-hoo"
version = "0.1.0"
description = "LLM-powered DIWOO metadata generation for Dutch government documents"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ICATT", email = "info@icatt.nl" }, {name = "INFONL", email = "info@info.nl"}]
keywords = ["diwoo", "woo", "metadata", "llm", "dutch-government", "openrouter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "openrouter>=0.1.0",
    "httpx>=0.28.0",
    "typer>=0.15.0",
    "structlog>=24.4.0",
    "pypdf>=5.1.0",
    "python-multipart>=0.0.18",
    "lxml>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
    "pyrefly>=0.15.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
woo-hoo = "woo_hoo.cli:app"

[project.urls]
Homepage = "https://github.com/GPP-Woo/woo-hoo"
Documentation = "https://github.com/GPP-Woo/woo-hoo#readme"
Repository = "https://github.com/GPP-Woo/woo-hoo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/woo_hoo"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["woo_hoo"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/woo_hoo"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
